<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- 画面全体のスクロールバーの定義 -->


    <!-- リニアレイアウトの定義 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- テキストビューの定義 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_viewsample" />

        <!-- エディットテキストの定義 -->

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <!-- チェックボックスの定義 -->

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_sample1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_sample1" />

        <!-- ラジオボタンの定義 -->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sample1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sample2" />
        </RadioGroup>

        <!-- 選択ボックスの定義 -->

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lv_sample1"
            android:paddingBottom="5dp"
            android:paddingTop="25dp" />

        <!-- リスト一覧の定義 -->

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:entries="@array/lv_sample1"
            android:paddingBottom="5dp"
            android:paddingTop="25dp" />

        <!-- ボタンの定義 -->

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_sample1" />
    </LinearLayout>

</ScrollView>